# ESP32screen

./: .gitignore  README.md
components/BSP/: CMakeLists.txt
components/BSP/MYFATFS/: exfuns.c
components/BSP/MYIIC/: myiic.c
components/BSP/XL9555/: xl9555.c
components/Middlewares/LVGL/src/extra/libs/fsdrv/: lv_fs_fatfs.c
main/: main.c
main/APP/: app_calculator.c  app_file.c  app_wifi.c  esptim.c  esptim.h  image.c  lv_mian_ui.c  lv_photo_ui.c  lv_photo_ui.h  lv_video_ui.c  lvgl_demo.c  xiaoxaiole.c
main/MANAGE/: bmp.c  jpeg.c  mjpeg.c  png.c  pngle.c
